--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width ,initial-scale=1.0">
 	<!-- css styles -->
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<script type="text/javascript" src="js/respond.js"></script>
+
 </head>
 <body>
 <!-- body content -->
 <!-- javascripts -->
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
