--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 <!-- body content -->
 <!-- javascripts -->
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
