--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
 </head>
 <body>
 <!-- body content -->
+	<header class="secondary-dark-blue-bg">
+		<div class="container">
+			<div class="row">
+				<a class="logo" href="#"><img src="img/logo.png" alt="logo" /></a>
+				<nav class="menu" id="menu">
+					<ul>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Our Works</a></li>
+						<li><a href="#">Team</a></li>
+						<li><a href="#">Testimonials</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
 <!-- javascripts -->
+<script src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
