--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 				<a class="logo" href="#"><img src="img/logo.png" alt="logo" /></a>
 				<nav class="menu" id="menu">
 					<ul>
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Our Works</a></li>
-						<li><a href="#">Team</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="#">Inicio</a></li>
+						<li><a href="#">Arte</a></li>
+						<li><a href="#">Filosofia</a></li>
+						<li><a href="#">Ciencia</a></li>
+						<li><a href="#">Comunidades</a></li>
+						<li><a href="#">Envía Tu Relato</a></li>
+						<li><a href="#">Promociona Tu Libro</a></li>
 					</ul>
 				</nav>
 			</div>
