--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/respond.js"></script>
+	<script type="text/javascript" src="js/caroufredsel.js"></script>
 
 </head>
 <body>
@@ -29,11 +31,25 @@
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</nav>
+				<div class="clearFix"></div>
 			</div>
 		</div>
 	</header>
+
+	<section class="slider">
+		<ul class="slider-carousel" id="slider-carousel">
+			<li>
+				<h1>Hi</h1>
+			</li>
+			<li>
+				<h1>Hi</h1>
+			</li>
+			<li>
+				<h1>Hi</h1>
+			</li>
+		</ul>
+	</section>
 <!-- javascripts -->
-<script src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
