--- a/index.html
+++ b/index.html
@@ -38,14 +38,20 @@
 
 	<section class="slider">
 		<ul class="slider-carousel" id="slider-carousel">
-			<li>
-				<h1>Hi</h1>
+			<li class="img1">
+				<h1>Welcome to <span class="primary">Corporate</span></h1>
+				<p>It is a long established fact that a reader will be distracted by the readable<br /> content of a page when looking at its layout</p>
+				<a href="#" class="primary-bg">Get Started</a><a href="#" class="secondary-sky-blue-bg">Contact Us</a>
 			</li>
-			<li>
-				<h1>Hi</h1>
+			<li class="img1">
+				<h1>Welcome to <span class="primary">Corporate</span></h1>
+				<p>It is a long established fact that a reader will be distracted by the readable<br /> content of a page when looking at its layout</p>
+				<a href="#" class="primary-bg">Get Started</a><a href="#" class="secondary-sky-blue-bg">Contact Us</a>
 			</li>
-			<li>
-				<h1>Hi</h1>
+			<li class="img1">
+				<h1>Welcome to <span class="primary">Corporate</span></h1>
+				<p>It is a long established fact that a reader will be distracted by the readable<br /> content of a page when looking at its layout</p>
+				<a href="#" class="primary-bg">Get Started</a><a href="#" class="secondary-sky-blue-bg">Contact Us</a>
 			</li>
 		</ul>
 	</section>
