ep 19 slider section part 2

--- a/index.html
+++ b/index.html
@@ -41,17 +41,25 @@
 			<li class="img1">
 				<h1>Welcome to <span class="primary">Corporate</span></h1>
 				<p>It is a long established fact that a reader will be distracted by the readable<br /> content of a page when looking at its layout</p>
-				<a href="#" class="primary-bg">Get Started</a><a href="#" class="secondary-sky-blue-bg">Contact Us</a>
+				<a href="#" class="primary-bg cta1">Get Started</a><a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
 			</li>
 			<li class="img1">
 				<h1>Welcome to <span class="primary">Corporate</span></h1>
 				<p>It is a long established fact that a reader will be distracted by the readable<br /> content of a page when looking at its layout</p>
-				<a href="#" class="primary-bg">Get Started</a><a href="#" class="secondary-sky-blue-bg">Contact Us</a>
+				<a href="#" class="primary-bg cta1">Get Started</a><a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
 			</li>
 			<li class="img1">
 				<h1>Welcome to <span class="primary">Corporate</span></h1>
 				<p>It is a long established fact that a reader will be distracted by the readable<br /> content of a page when looking at its layout</p>
-				<a href="#" class="primary-bg">Get Started</a><a href="#" class="secondary-sky-blue-bg">Contact Us</a>
+				<a href="#" class="primary-bg cta1">Get Started</a><a href="#" class="secondary-sky-blue-bg cta2">Contact Us</a>
+			</li>
+		</ul>
+		<ul class="sliderpager">
+			<li><a href="#"><i class="fa fa-circle"></i></a>
+			</li>
+			<li><a href="#"><i class="fa fa-circle"></i></a>
+			</li>
+			<li><a href="#"><i class="fa fa-circle"></i></a>
 			</li>
 		</ul>
 	</section>
