--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/respond.js"></script>
+	<script type="text/javascript" src="js/caroufredsel.js"></script>
 
 </head>
 <body>
@@ -18,7 +20,7 @@
 	<header class="secondary-dark-blue-bg">
 		<div class="container">
 			<div class="row">
-				<a class="logo" href="#"><img src="img/logo.png" alt="logo" /></a>
+				<a class="logo" href="#"><img src="img/wayra.png" alt="logo" /></a>
 				<nav class="menu" id="menu">
 					<ul>
 						<li><a href="#">Inicio</a></li>
@@ -30,11 +32,31 @@
 						<li><a href="#">Promociona Tu Libro</a></li>
 					</ul>
 				</nav>
+				<div class="clearFix"></div>
 			</div>
 		</div>
 	</header>
+
+	<section class="slider">
+		<ul class="slider-carousel" id="slider-carousel">
+			<li class="img1">
+				<h1>Bienvenido a <span class="primary">Wayra</span></h1>
+				<p>Sed consequat, leo eget bibendum sodales, augue velit cursus nunc<br /> Nullam quis ante. Etiam sit amet orci eget eros</p>
+				<a href="#" class="primary-bg">Inicio</a><a href="#" class="secondary-sky-blue-bg">Contáctenos</a>
+			</li>
+			<li class="img1">
+				<h1>Bienvenido a <span class="primary">Wayra</span></h1>
+				<p>Sed consequat, leo eget bibendum sodales, augue velit cursus nunc<br /> Nullam quis ante. Etiam sit amet orci eget eros</p>
+				<a href="#" class="primary-bg">Inicio</a><a href="#" class="secondary-sky-blue-bg">Contáctenos</a>
+			</li>
+			<li class="img1">
+				<h1>Bienvenido a <span class="primary">Wayra</span></h1>
+				<p>Sed consequat, leo eget bibendum sodales, augue velit cursus nunc<br /> Nullam quis ante. Etiam sit amet orci eget eros</p>
+				<a href="#" class="primary-bg">Inicio</a><a href="#" class="secondary-sky-blue-bg">Contáctenos</a>
+			</li>
+		</ul>
+	</section>
 <!-- javascripts -->
-<script src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
