--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <!-- body content -->
-	<header class="secondary-dark-blue-bg">
+	<header>
 		<div class="container">
 			<div class="row">
 				<a class="logo" href="#"><img src="img/logo.png" alt="logo" /></a>
