ep 21 Services section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,54 @@
 			</li>
 		</ul>
 	</section>
+	<section class="services section-padding">
+		<div class="sevices-header">
+			<h1>Services</h1>
+			<p>It is a long established fact that a reader will be distracted by the<br/>readable conent of a page when looking at its layout</p>
+		</div>
+
+		<br />
+
+		<div class="services-content">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4">
+						<p><i class="fa fa-laptop"></i></p>
+						<h3>Web Design</h3>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+					</div>
+					<div class="col-md-4">
+						<p><i class="fa fa-edit"></i></p>
+						<h3>Graphic Design</h3>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+					</div>
+					<div class="col-md-4">
+						<p><i class="fa fa-cog"></i></p>
+						<h3>PSD to HTML/CSS</h3>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-4">
+						<p><i class="fa fa-bars"></i></p>
+						<h3>WordpressDesign</h3>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+					</div>
+					<div class="col-md-4">
+						<p><i class="fa fa-leaf"></i></p>
+						<h3>Web Development</h3>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+					</div>
+					<div class="col-md-4">
+						<p><i class="fa fa-globe"></i></p>
+						<h3>Unlimited Support</h3>
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 <!-- javascripts -->
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
