--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		</ul>
 	</section>
 	<section class="services section-padding">
-		<div class="sevices-header">
+		<div class="services-header">
 			<h1>Services</h1>
 			<p>It is a long established fact that a reader will be distracted by the<br/>readable conent of a page when looking at its layout</p>
 		</div>
